[package]
name = "concurrency_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rust_xlsxwriter = "0.50.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.105"
